db-infra/terraform/documentdb.tf
provider "aws" {
  region = "us-east-1"
}

# Data source para listar as Zonas de Disponibilidade
data "aws_availability_zones" "available" {}

# Criação da VPC (se não existir)
resource "aws_vpc" "eks_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "eks-vpc"
  }
}

# Criação das subnets
resource "aws_subnet" "eks_subnets" {
  count             = 2
  cidr_block        = cidrsubnet(aws_vpc.eks_vpc.cidr_block, 8, count.index)
  vpc_id            = aws_vpc.eks_vpc.id
  availability_zone = element(data.aws_availability_zones.available.names, count.index)

  tags = {
    Name = "eks-subnet-${count.index + 1}"
  }
}

# Criação do Internet Gateway
resource "aws_internet_gateway" "eks_igw" {
  vpc_id = aws_vpc.eks_vpc.id
  tags = {
    Name = "eks-internet-gateway"
  }
}

# Criação da tabela de rotas
resource "aws_route_table" "eks_route_table" {
  vpc_id = aws_vpc.eks_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.eks_igw.id
  }

  tags = {
    Name = "eks-route-table"
  }
}

# Associação das subnets à tabela de rotas
resource "aws_route_table_association" "eks_route_table_association" {
  count          = 2
  subnet_id      = aws_subnet.eks_subnets[count.index].id
  route_table_id = aws_route_table.eks_route_table.id
}

# Criação do Security Group para o DocumentDB
resource "aws_security_group" "docdb_sg" {
  name        = "documentdb-sg"
  description = "Security group for DocumentDB"
  vpc_id      = aws_vpc.eks_vpc.id

  ingress {
    from_port   = 27017
    to_port     = 27017
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ips]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Definindo um DB Subnet Group para o DocumentDB
resource "aws_docdb_subnet_group" "docdb_subnet_group" {
  name       = "my-docdb-subnet-group"
  subnet_ids = aws_subnet.eks_subnets[*].id

  tags = {
    Name = "my-docdb-subnet-group"
  }
}

# Criação do cluster DocumentDB
resource "aws_docdb_cluster" "docdb_cluster" {
  cluster_identifier      = "my-documentdb-cluster"
  engine                  = "docdb"
  master_username         = var.master_username
  master_password         = var.master_password
  backup_retention_period = 1
  preferred_backup_window = "07:00-09:00"
  vpc_security_group_ids  = [aws_security_group.docdb_sg.id]
  db_subnet_group_name    = aws_docdb_subnet_group.docdb_subnet_group.name

  tags = {
    Name = "documentdb-cluster"
  }
}

# Criação das instâncias que farão parte do cluster DocumentDB
resource "aws_docdb_cluster_instance" "docdb_instance" {
  count              = 1
  identifier         = "my-documentdb-instance-${count.index}"
  cluster_identifier = aws_docdb_cluster.docdb_cluster.id
  instance_class     = "db.t3.medium"
  apply_immediately  = true

  tags = {
    Name = "documentdb-instance-${count.index}"
  }
}

# Output para exibir o endpoint do DocumentDB
output "documentdb_endpoint" {
  description = "Endpoint do DocumentDB"
  value       = aws_docdb_cluster.docdb_cluster.endpoint
}

# Variáveis necessárias para parametrizar o Terraform
variable "master_username" {
  description = "Nome de usuário administrador do DocumentDB"
  type        = string
}

variable "master_password" {
  description = "Senha do DocumentDB"
  type        = string
  sensitive   = true
}

variable "allowed_ips" {
  description = "Bloco de CIDR para permitir o acesso ao DocumentDB"
  type        = string
  default     = "0.0.0.0/0"
}
